<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/club_image"
        android:layout_marginBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/club_name_lbl"
        android:layout_below="@+id/club_image"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/club_name"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/club_name"
        android:layout_toEndOf="@+id/club_name_lbl"
        android:layout_below="@+id/club_image"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/club_date_lbl"
        android:layout_below="@+id/club_name_lbl"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/club_date"
        android:layout_toEndOf="@+id/club_name_lbl"
        android:layout_below="@+id/club_name_lbl"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/email_button"
        android:text="@string/send_email_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/club_date_lbl"
        />
    <Button
        android:id="@+id/call_button"
        android:text="@string/call_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/club_date_lbl"
        />
    <Button
        android:id="@+id/fb_button"
        android:text="@string/fb_btn_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@+id/club_date_lbl"
        />


</RelativeLayout>